--- a/.github/workflows/Docker_Build_&_Push_.yml
+++ b/.github/workflows/Docker_Build_&_Push_.yml
@@ -5,8 +5,11 @@ on:
     branches: [ main ]
 
 jobs:
-  BuildBase:
+
+  Build:
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Get repo
         uses: actions/checkout@v2
@@ -19,7 +22,7 @@ jobs:
         with:
           registry: ghcr.io
           username: MOOGAA
-          password: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.GH_ACTION_TOKEN }}
       - name: Build Base images
         uses: docker/build-push-action@v2
         with:
