--- a/.github/workflows/Docker_Build_&_Push_.yml
+++ b/.github/workflows/Docker_Build_&_Push_.yml
@@ -13,21 +13,21 @@ jobs:
     steps:
       - name: Get repo
         uses: actions/checkout@v2
-      - name: Set up QEMU
+      - name: SetUp QEMU
         uses: docker/setup-qemu-action@v1
-      - name: Setup Docker buildx
+      - name: SetUp Docker buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
+      - name: Login 2 Registry
         uses: docker/login-action@v1 
         with:
           registry: ghcr.io
           username: MOOGAA
           password: ${{ secrets.GH_ACTION_TOKEN }}
-      - name: Build Base images
+      - name: Build & Push Images
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ghcr.io/moogaa/sdx
+          tags: ghcr.io/moogaa/sdx-test0:latest
