--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Build & Push
 
 on:
   push:
@@ -16,38 +16,44 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
+#    permissions:
+#      contents: read
+#      packages: write
+#      id-token: write
 
     steps:
 
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Docker buildx
+#      - uses: satackey/action-docker-layer-caching@v0.0.11
+#        continue-on-error: true
+
+      - name: SetUp QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: SetUp Docker Buildx
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
 
-      - name: Log into registry ${{ env.REGISTRY }}
+      - name: Login 2 Container Registry
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GH_ACTION_TOKEN }}
 
-      - name: Extract Docker metadata
+      - name: Extract Container metadata
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Build and push Docker image
-        id: build-and-push
+      - name: Build & Push
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
           file: ./Dockerfile
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
