--- a/.github/workflows/Docker_Build_&_Push_.yml
+++ b/.github/workflows/Docker_Build_&_Push_.yml
@@ -48,7 +48,7 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64 , linux/arm64/v8
           push: true
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ github.repository }}
-          cache-to: type=inline
+          cache-from: type=registry , ref=${{ env.REGISTRY }}/${{ github.repository }}
+          cache-to: type=registry , ref=${{ env.REGISTRY }}/${{ github.repository }} , mode=max
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
