--- a/.github/workflows/Docker_Build_&_Push_.yml
+++ b/.github/workflows/Docker_Build_&_Push_.yml
@@ -48,6 +48,8 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64 , linux/arm64/v8
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           cache-from: type=registry , ref=${{ env.REGISTRY }}/${{ github.repository }}
           cache-to: type=registry , ref=${{ env.REGISTRY }}/${{ github.repository }} , mode=max
           tags: ${{ steps.meta.outputs.tags }}
