--- a/package.json
+++ b/package.json
@@ -1,20 +1,49 @@
 {
-  "private": true,
+  "name": "serve",
+  "version": "13.0.2",
+  "description": "Static file serving and directory listing",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
+    "test": "yarn lint",
+    "lint": "zeit-eslint --ext .jsx,.js .",
+    "lint-staged": "git diff --diff-filter=ACMRT --cached --name-only '*.js' '*.jsx' | xargs zeit-eslint"
+  },
+  "files": [
+    "bin"
+  ],
+  "repository": "vercel/serve",
+  "bin": {
+    "serve": "./bin/serve.js"
+  },
+  "keywords": [
+    "now",
+    "serve",
+    "micro",
+    "http-server"
+  ],
+  "author": "leo",
+  "license": "MIT",
+  "devDependencies": {
+    "@zeit/eslint-config-node": "0.3.0",
+    "@zeit/git-hooks": "0.1.4",
+    "eslint": "5.4.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@zeit/eslint-config-node"
+    ]
+  },
+  "git": {
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "typescript": "4.0"
+    "@zeit/schemas": "2.6.0",
+    "ajv": "6.12.6",
+    "arg": "2.0.0",
+    "boxen": "5.1.2",
+    "chalk": "2.4.1",
+    "clipboardy": "2.3.0",
+    "compression": "1.7.3",
+    "serve-handler": "6.1.3",
+    "update-check": "1.5.2"
   }
 }
